--- a/packages/editer/src/styles/layout.less
+++ b/packages/editer/src/styles/layout.less
@@ -1,2 +1,9 @@
 @import './vars.less';
 
+html,body,#root{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    color: var(--vb-gray);
+}
