--- a/packages/editer/src/Container/Workspace/index.less
+++ b/packages/editer/src/Container/Workspace/index.less
@@ -26,6 +26,7 @@
         }
     }
     &-viewport{
+        position: relative;
         flex:1;
         border: 5px solid var(--vb-white-gray-lighter);
         margin-bottom: 10px;
