--- a/packages/editer/src/schema-render/index.less
+++ b/packages/editer/src/schema-render/index.less
@@ -17,6 +17,34 @@
     right: 0;
     pointer-events: none;
     &-box{
-        border: 2px solid var(--vb-brand-dragging);
+        border: 2px dotted var(--vb-brand-hovering);
+        &-menu{
+            display: flex;
+            position: absolute;
+            top: -27px;
+            left: 0;
+            width: 100px;
+            height: 25px;
+            pointer-events: visible;
+            
+            &-item{
+                width: 20px;
+                height: 21px;
+                &-bg{
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
+                    line-height: 21px;
+                    background-color: var(--vb-brand) ;
+                    color: #fff;
+                    border-radius: 2px;
+                    cursor: pointer; 
+                }
+            }
+           
+           
+        }
+       
     }
+   
 }
